--- a/table_example.html
+++ b/table_example.html
@@ -5,6 +5,24 @@
     <style type="text/css">
       tr:nth-child(even) {background: #CCC}
       tr:nth-child(odd) {background: #FFF}
+      .axis path,
+      .axis line {
+          fill: none;
+          stroke: #000;
+          shape-rendering: crispEdges;
+      }
+      .axis text {
+          font-family: sans-serif;
+          font-size: 10px;
+      }
+      .chart rect {
+        fill: teal;
+      }
+      .chart text {
+        /*fill: white;*/
+        font: 10px sans-serif;
+        /*text-anchor: end;*/
+      }
     </style>
   </head>
   <body>
